--- a/cadastro.css
+++ b/cadastro.css
@@ -15,7 +15,7 @@ body {
 
 .cadastro-container h1 {
   font-size: 32px;
-  color: #ff5353;
+  color:  rgb(79, 34, 241);
   margin-bottom: 30px;
 }
 
@@ -44,7 +44,7 @@ body {
 }
 
 button[type="submit"] {
-  background-color: #ff5353;
+  background-color:  rgb(79, 34, 241);
   color: #fff;
   border: none;
   padding: 15px 30px;
@@ -55,5 +55,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #e84141;
+  background-color:  rgb(79, 34, 241);
 }
