--- a/menu.css
+++ b/menu.css
@@ -1,66 +1,4 @@
 
-
-
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    background-color: rgb(255, 83, 83);
-    color: white;
-    padding: 40px 10%;
-    font-family: 'Arial', sans-serif;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer-left {
-    width: 50%;
-}
-
-.footer-left .logo {
-    height: 100px;
-    margin-bottom: 10px;
-}
-
-.footer-left p {
-    max-width: 400px;
-    line-height: 1.6;
-}
-
-.footer-right {
-    width: 40%;
-    color: #3b3b3b;
-}
-
-.footer-right h3 {
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.footer-right ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-right li {
-    margin-bottom: 8px;
-    color: white;
-}
-
-.footer-right a {
-    text-decoration: none;
-    color: white;
-}
-
-.footer-right a:hover {
-    text-decoration: underline;
-}
-
-
-/*aqui começa o main*/
-
 main {
     display: flex;
     flex-direction: column;
@@ -74,7 +12,7 @@ main a button{
     width: 500px;
     height: 40px;
     font-size: 15px;
-    background-color: rgb(255, 58, 58);
+    background-color:  rgba(112, 74, 248, 0.863);
     border-radius: 10px;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
